# celestia-app

./: .clang-format  .coderabbit.yaml  .dockerignore  .gitignore  .golangci.bck.yml  .golangci.yml  .goreleaser.yaml  .markdownlint.yaml  2024-06-27-12-31-27-5299334-start-times.csv  2024-06-27-12-32-14-5299334-block-times.csv  2024-07-31-16-53-49-73d2276-block-times.csv  2024-07-31-17-09-13-73d2276-block-times.csv  2024-08-09-15-08-14-8f93462-block-times.csv  2024-08-09-15-23-10-8f93462-block-times.csv  2024-08-09-15-47-14-27bf8ce-block-times.csv  2024-08-12-18-44-27-pr-3713-block-times.csv  2024-08-13-12-29-07-pr-3713-block-times.csv  2024-08-13-13-31-29-pr-3713-block-times.csv  2024-08-13-14-10-58-e43786b-block-times.csv  2024-08-13-14-19-07-pr-3713-block-times.csv  2024-08-14-14-18-22-pr-3713-block-times.csv  2024-08-14-15-41-10-pr-3713-block-times.csv  2024-08-15-10-58-51-dec69e4-block-times.csv  2024-08-15-16-05-17-1d1ed35-block-times.csv  2024-08-16-14-59-51-1d1ed35-block-times.csv  2024-08-16-17-24-42-8e18957-block-times.csv  2024-08-16-17-53-01-bc218e8-block-times.csv  2024-08-21-10-41-43-db3d1a9-block-times.csv  2024-08-26-22-47-06-3807062-block-times.csv  2024-08-26-23-07-43-3807062-block-times.csv  2024-08-28-19-07-47-4021c9f-block-times.csv  404.html  BASELINE_BUILD.md  BLOCKSTORE_INVESTIGATION.md  CHANGELOG-PENDING.md  CLAUDE.md  Dockerfile  MAINTAINERS.md  Makefile  NOTICE  (+107 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  auto_request_review.yml  copilot-instructions.md  copilot-setup-steps.yml  dependabot.yml  markdown-link-check-confg.json  markdown-link-check-config.json  mergify.yml
abci/: abci.go  versions.go
adrs/: adr008:adopt-ABC++-early.md
app/: abci.go  abci_test.go  address.go  ante.go  antehander.go  app.go  app_test.go  apphash_test.go  benchmark_ibc_update_client_test.go  benchmark_msg_send_test.go  benchmark_pfb_test.go  benchmark_test.go  blocked_params.go  checkTx.go  check_tx.go  child_tx_decoder.go  config.go  consistent_apphash_test.go  default_overrides.go  default_overrides_test.go  deliver_tx.go  denom.go  download_genesis.go  download_genesis_test.go  encoding.go  end_block.go  estimate_square_size.go  estimate_square_size_test.go  export.go  extend_block.go  fee_forward_test.go  feeaddress_test.go  fibre.go  fibre_disabled.go  fibre_disabled_test.go  fibre_enabled.go  filtered_square_builder.go  filtered_square_builder_fibre_test.go  filtered_square_builder_test.go  genesis.go  (+59 more)
appd/: run_test.go
celestia-appd/: main.go
cmd/: main.go
config/: app.toml  client.toml  config.toml
contrib/: Dockerfile.test  localnet-blocks-test.sh  single-node.sh  test_cover.sh
docker/: Dockerfile  Dockerfile.multiplexer  Dockerfile.test  Dockerfile_ephemeral  Dockerfile_txsim  README.md  docker-compose.yml  entry.sh  entrypoint.sh  init-mainnet.sh  multiplexer.Dockerfile  priv_validator_state.json  standalone.Dockerfile  txsim.sh
docs/: INTEGRATION-GUIDE-PERMISSIONLESS-HYPERLANE.md  SHARE_VISUAL_REPRESENTATIONS.md  dependency-management.md  permissionless-hyperlane-automatic.md  permissionless-hyperlane-e2e-setup.md  permissionless-hyperlane-implementation.md  permissionless-hyperlane-notion.md  permissionless-hyperlane-proposal-approval.md  permissionless-msg-setup-infrastructure.md  permissionless-test-results.md  tastora-local-network.md
encoding/: encoding.go  encoding_test.go
fibre/: blob.go  blob_id.go  blob_id_test.go  blob_test.go  client.go  client_config.go  client_config_test.go  client_download.go  client_download_bench_test.go  client_download_test.go  client_metrics.go  client_put.go  client_retry.go  client_retry_test.go  client_server_test.go  client_server_upload_test.go  client_test.go  client_timeout_test.go  client_upload.go  client_upload_bench_test.go  client_upload_test.go  commitment.go  download.go  download_test.go  escrow_config_test.go  escrow_funding.go  escrow_ledger.go  metrics.go  (+42 more)
tools/lumina-latency-monitor/: Cargo.toml  README.md
tools/lumina-latency-monitor/.cargo/: config.toml
tools/lumina-latency-monitor/src/: config.rs  main.rs  metrics.rs  output.rs  prometheus.rs  sovereign.rs  tx.rs
tools/lumina-latency-monitor/src/keyring/: decrypt.rs  error.rs  mod.rs  proto.rs
tools/lumina-latency-monitor/xtask/src/: main.rs
tools/rust-fibre-txsim/: Cargo.toml  build.rs
tools/rust-fibre-txsim/src/: main.rs
tools/rust-fibre-txsim/src/keyring/: decrypt.rs  error.rs  mod.rs  proto.rs
tools/rust-fibre-txsim/xtask/: Cargo.toml
tools/rust-fibre-txsim/xtask/src/: main.rs
(+4081 files in other folders)
