[workspace]
members = ["xtask"]

[package]
name = "lumina-latency-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
celestia-grpc = { git = "https://github.com/celestiaorg/lumina", features = ["tls-ring"] }
celestia-types = { git = "https://github.com/celestiaorg/lumina" }
tokio = { version = "1.49", features = ["macros", "rt", "rt-multi-thread", "signal"] }
rand = "0.8.5"
hex = "0.4.3"
anyhow = "1.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }

clap = { version = "4.5", features = ["derive", "env"] }
csv = "1.3"
humantime = "2.1"
thiserror = "2.0"

# Keyring support
prost = "0.13"
dirs = "5.0"
bech32 = "0.11"
sha2 = "0.10"
ripemd = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

# JWE decryption (pure Rust, no OpenSSL)
pbkdf2 = { version = "0.12", features = ["hmac"] }
aes-gcm = "0.10"
aes-kw = "0.2"
hmac = "0.12"

# Prometheus metrics
prometheus = { version = "0.13", default-features = false }
lazy_static = "1.4"
hyper = { version = "1.5", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[dev-dependencies]
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "macros"] }
